--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -200,7 +200,7 @@
             <button class="btn">Get your free proposal</button>
         </div>
         <div class="right">
-            <img class="s-3" src="./png/Frame 19.png" alt="Frame" >
+            <img class="s-3" src="./png/Frame 19.png" alt="Frame">
             <!-- width="259px" height="280px" -->
         </div>
     </div>
@@ -355,15 +355,19 @@
                     <img src="./png/Picture.png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
 
@@ -373,15 +377,19 @@
                     <img src="./png/Mask group.png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
 
@@ -391,15 +399,19 @@
                     <img src="./png/Picture (1).png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
 
@@ -409,15 +421,19 @@
                     <img src="./png/Picture.png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
 
@@ -427,15 +443,19 @@
                     <img src="./png/Picture (3).png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
 
@@ -445,19 +465,78 @@
                     <img src="./png/Picture (4).png" alt="Picture" class="pic1">
                 </div>
                 <div class="right3">
-                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
-                    <div  class="text3">
+                    <div class="linkdine-img">
+                        <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    </div>
+                    
+                    <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
                     </div>
                 </div>
             </div>
             <div class="bottom">
-                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+                <p class="m-4">10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy
+                </p>
             </div>
         </div>
     </div>
 
+    <div class="button">
+        <button class="btn btn2">See all team</button>
+    </div>
+
+    <div class="container-4">
+        <h1 class="service">Testimonials</h1>
+        <p class="normal">Hear from Our Satisfied Clients: Read Our Testimonials to Learn More about Our Digital
+            Marketing Services</p>
+    </div>
+
+    <div id="slider">
+        <input type="radio" name="slider" id="slide1" checked>
+        <input type="radio" name="slider" id="slide2">
+        <input type="radio" name="slider" id="slide3">
+        <input type="radio" name="slider" id="slide4">
+        <div id="slides">
+           <div id="overflow">
+              <div class="inner">
+                 <div class="slide slide_1">
+                    <div class="slide-content">
+                        <img src="./png/Card.png" alt="Card">
+                    </div>
+                 </div>
+                 <div class="slide slide_2">
+                    <div class="slide-content">
+                       <img src="./png/Card.png" alt="Card">
+                    </div>
+                 </div>
+                 <div class="slide slide_3">
+                    <div class="slide-content">
+                        <img src="./png/Card.png" alt="Card">
+                    </div>
+                 </div>
+                 <div class="slide slide_4">
+                    <div class="slide-content">
+                        <img src="./png/Card.png" alt="Card">
+                    </div>
+                 </div>
+              </div>
+           </div>
+           <div id="bullets">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+         </div>
+        </div>
+        <div id="controls">
+           <label for="slide1"></label>
+           <label for="slide2"></label>
+           <label for="slide3"></label>
+           <label for="slide4"></label>
+        </div>
+
+     </div>
 </body>
 
 </html>
