add new icon in black box.

--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -468,7 +468,7 @@
                     <div class="linkdine-img">
                         <img src="./png/linkedin.png" alt="linkedin" class="pic2">
                     </div>
-                    
+
                     <div class="text3">
                         <h3 class="p-5">John Smith</h3>
                         <h3 class="m-4">CEO and Founder</h3>
@@ -498,45 +498,49 @@
         <input type="radio" name="slider" id="slide3">
         <input type="radio" name="slider" id="slide4">
         <div id="slides">
-           <div id="overflow">
-              <div class="inner">
-                 <div class="slide slide_1">
-                    <div class="slide-content">
-                        <img src="./png/Card.png" alt="Card">
+            <div id="overflow">
+                <div class="inner">
+                    <div class="slide slide_1">
+                        <div class="slide-content">
+                            <p class="p3">"We have been working with Positivus for the past year <br> and have seen a
+                                significant increase in website traffic <br> and leads as a result of their efforts. The
+                                team is <br> professional, responsive, and truly cares about the <br>success of our business.
+                                We highly recommend Positivus <br>to any company looking to grow their online presence."
+                            </p>
+                        </div>
                     </div>
-                 </div>
-                 <div class="slide slide_2">
-                    <div class="slide-content">
-                       <img src="./png/Card.png" alt="Card">
+                    <div class="slide slide_2">
+                        <div class="slide-content">
+                            <img src="./png/Card.png" alt="Card">
+                        </div>
                     </div>
-                 </div>
-                 <div class="slide slide_3">
-                    <div class="slide-content">
-                        <img src="./png/Card.png" alt="Card">
+                    <div class="slide slide_3">
+                        <div class="slide-content">
+                            <img src="./png/Card.png" alt="Card">
+                        </div>
                     </div>
-                 </div>
-                 <div class="slide slide_4">
-                    <div class="slide-content">
-                        <img src="./png/Card.png" alt="Card">
+                    <div class="slide slide_4">
+                        <div class="slide-content">
+                            <img src="./png/Card.png" alt="Card">
+                        </div>
                     </div>
-                 </div>
-              </div>
-           </div>
-           <div id="bullets">
+                </div>
+            </div>
+            <div id="bullets">
+                <label for="slide1"></label>
+                <label for="slide2"></label>
+                <label for="slide3"></label>
+                <label for="slide4"></label>
+            </div>
+        </div>
+        <div id="controls">
             <label for="slide1"></label>
             <label for="slide2"></label>
             <label for="slide3"></label>
             <label for="slide4"></label>
-         </div>
-        </div>
-        <div id="controls">
-           <label for="slide1"></label>
-           <label for="slide2"></label>
-           <label for="slide3"></label>
-           <label for="slide4"></label>
         </div>
 
-     </div>
+    </div>
 </body>
 
 </html>
