--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -497,50 +497,105 @@
         <input type="radio" name="slider" id="slide2">
         <input type="radio" name="slider" id="slide3">
         <input type="radio" name="slider" id="slide4">
-        <div id="slides">
-            <div id="overflow">
-                <div class="inner">
-                    <div class="slide slide_1">
-                        <div class="slide-content">
-                            <p class="p3">"We have been working with Positivus for the past year <br> and have seen a
-                                significant increase in website traffic <br> and leads as a result of their efforts. The
-                                team is <br> professional, responsive, and truly cares about the <br>success of our business.
-                                We highly recommend Positivus <br>to any company looking to grow their online presence."
-                            </p>
+           <div id="slides">
+                <div id="overflow">
+                    <div class="inner">
+                        <div class="slide slide_1">
+                            <div class="slide-content">
+                                <p class="testimonial">We have been working with Positivus for the past year  and have seen a
+                                    significant increase in website traffic  and leads as a result of their efforts. The
+                                    team is  professional, responsive, and truly cares about the success of our business.
+                                    We highly recommend Positivus to any company looking to grow their online presence.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slide slide_2">
-                        <div class="slide-content">
-                            <img src="./png/Card.png" alt="Card">
+                        <div class="slide slide_2">
+                            <div class="slide-content">
+                                <p class="testimonial">We have been working with Positivus for the past year  and have seen a
+                                    significant increase in website traffic  and leads as a result of their efforts. The
+                                    team is  professional, responsive, and truly cares about the success of our business.
+                                    We highly recommend Positivus to any company looking to grow their online presence.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slide slide_3">
-                        <div class="slide-content">
-                            <img src="./png/Card.png" alt="Card">
+                        <div class="slide slide_3">
+                            <div class="slide-content">
+                                <p class="testimonial">We have been working with Positivus for the past year  and have seen a
+                                    significant increase in website traffic  and leads as a result of their efforts. The
+                                    team is  professional, responsive, and truly cares about the success of our business.
+                                    We highly recommend Positivus to any company looking to grow their online presence.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="slide slide_4">
-                        <div class="slide-content">
-                            <img src="./png/Card.png" alt="Card">
+                        <div class="slide slide_4">
+                            <div class="slide-content">
+                                <p class="testimonial">We have been working with Positivus for the past year  and have seen a
+                                    significant increase in website traffic  and leads as a result of their efforts. The
+                                    team is  professional, responsive, and truly cares about the success of our business.
+                                    We highly recommend Positivus to any company looking to grow their online presence.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="bullets">
-                <label for="slide1"></label>
-                <label for="slide2"></label>
-                <label for="slide3"></label>
-                <label for="slide4"></label>
-            </div>
-        </div>
-        <div id="controls">
-            <label for="slide1"></label>
-            <label for="slide2"></label>
-            <label for="slide3"></label>
-            <label for="slide4"></label>
-        </div>
+                <div class="bullet-container">
+                    <div id="bullets">
+                        <label for="slide1"></label>
+                        <label for="slide2"></label>
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                    </div>
+
+                    <div id="controls">
+                        <label for="slide1"></label>
+                        <label for="slide2"></label>
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                    </div>
+                </div>
+           </div>
 
     </div>
+
+    <footer>
+        <div class="top-side">
+            <div class="left-sidebar-2">
+                <img src="./png/Logo (1).png" alt="Logo" style="color: #FFFFFF;">
+            </div>
+            <div class="center-bar">
+                <li><a class="white1" href="#">About us</a></li>
+                <li><a class="white1" href="#">Services</a></li>
+                <li><a class="white1" href="#">Use Cases</a></li>
+                <li><a class="white1" href="#">Pricing</a></li>
+                <li><a class="white1" href="#">Blog</a></li>
+            </div>
+            <div class="right-side-bar">
+                    <div class="c-icon">
+                        <img src="./png/linkedin.png" alt="linkedin" style="width: 25px; height: 25px;">
+                    </div>
+                        <img src="./png/Social icon.png" alt="Social icon" style="width: 50px; height: 50px;">
+                    <div class="c-icon">
+                        <img src="./png/twitter.png" alt="twitter" style="width: 25px; height: 25px;"> 
+                    </div>
+            </div>
+        </div>
+        <div class="bottom-side">
+            <div class="center6">
+                <div class="left-side2">
+                    <h3 class="contact">Contact us:</h3>
+                    <p class="white">Email: <a class="white" href="mailto:info@positivus.com">info@positivus.com</a></p>
+                    <p class="white">Phone: <a class="white" href="tel:+555-567-8901">555-567-8901</a></p>
+                    <p class="white">Address: 1234 Main St <br>
+                        Moonstone City, Stardust State 12345</p>
+                </div>
+                <div class="rightside2">
+                    <input type="email" name="Email" id="email" placeholder="Email">
+                    <p class="contact2">Subscribe to news</p>
+                </div>
+            </div>
+            <p class="white">&copy;The copyright sign:</p> 
+        </div>
+    </footer>
 </body>
 
 </html>
