changes in the footer.

--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
 <body>
@@ -554,7 +555,20 @@
                     </div>
                 </div>
            </div>
+    </div>
 
+    <div class="container-4">
+        <h2 class="service">Contact Us</h2>
+        <p class="normal">Connect with Us: Let's Discuss Your <br> Digital Marketing Needs</p>
+    </div>
+
+    <div class="image1">
+        <div class="left-side-2">
+            <img class="common-img" src="./png/Form.png" alt="Form">
+        </div>
+        <div class="right-side-2">
+            <img class="img2 common-img" src="./png/Illustration_5.png" alt="Illustration_5">
+        </div>
     </div>
 
     <footer>
@@ -562,6 +576,7 @@
             <div class="left-sidebar-2">
                 <img src="./png/Logo (1).png" alt="Logo" style="color: #FFFFFF;">
             </div>
+
             <div class="center-bar">
                 <li><a class="white1" href="#">About us</a></li>
                 <li><a class="white1" href="#">Services</a></li>
@@ -569,31 +584,62 @@
                 <li><a class="white1" href="#">Pricing</a></li>
                 <li><a class="white1" href="#">Blog</a></li>
             </div>
+
             <div class="right-side-bar">
                     <div class="c-icon">
-                        <img src="./png/linkedin.png" alt="linkedin" style="width: 25px; height: 25px;">
+                        <i class="fa-brands fa-linkedin-in"></i>
                     </div>
-                        <img src="./png/Social icon.png" alt="Social icon" style="width: 50px; height: 50px;">
+
                     <div class="c-icon">
-                        <img src="./png/twitter.png" alt="twitter" style="width: 25px; height: 25px;"> 
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+
+                    <div class="c-icon">
+                        <i class="fa-brands fa-twitter"></i>
                     </div>
             </div>
         </div>
+
         <div class="bottom-side">
             <div class="center6">
                 <div class="left-side2">
                     <h3 class="contact">Contact us:</h3>
                     <p class="white">Email: <a class="white" href="mailto:info@positivus.com">info@positivus.com</a></p>
                     <p class="white">Phone: <a class="white" href="tel:+555-567-8901">555-567-8901</a></p>
-                    <p class="white">Address: 1234 Main St <br>
-                        Moonstone City, Stardust State 12345</p>
+                    <p class="white">Address: 1234 Main St <br>Moonstone City, Stardust State 12345</p>
                 </div>
+                
                 <div class="rightside2">
                     <input type="email" name="Email" id="email" placeholder="Email">
                     <p class="contact2">Subscribe to news</p>
                 </div>
+
+                <div class="visible">
+                    <div class="c-icon">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+
+                    <div class="c-icon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+
+                    <div class="c-icon">
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+
+                </div>
             </div>
-            <p class="white">&copy;The copyright sign:</p> 
+
+            <div class="privacy">
+                <div class="left3">
+                    <p class="white">&copy 2023 Positivus. All Rights Reserved.</p> 
+                </div>
+
+                <div class="right3">
+                    <p class="white1">Privacy Policy</p>
+                </div>
+
+            </div>
         </div>
     </footer>
 </body>
