--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -562,6 +562,24 @@
         <p class="normal">Connect with Us: Let's Discuss Your <br> Digital Marketing Needs</p>
     </div>
 
+    <!-- carousel code -->
+     <section class="carousel">
+        <ol class="carousel_viewport">
+            <li id="carousel_slide1">
+                <img src="./Card.png" alt="">
+            </li>
+            <li id="carousel_slide2">
+                <img src="./Card.png" alt="">
+            </li>
+            <li id="carousel_slide3">
+                <img src="./Card.png" alt="">
+            </li>
+            <li id="carousel_slide4">
+                <img src="./Card.png" alt="">
+            </li>
+        </ol>
+     </section>
+
     <div class="image1">
         <div class="left-side-2">
             <img class="common-img" src="./png/Form.png" alt="Form">
