--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="./grid_and_flexbox_Tasks/try.html" target="_blank">try</a>
                 <a href="./grid_and_flexbox_Tasks/git_hub/grid.html" target="_blank">grid</a>
                 <a href="./positivus_Landing_Page/landing_Page.html" target="_blank">Landing_Page</a>
+                <a href="./carousel/slider.html">slider</a>
             </div>
         </details>
 
