add table file in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <a href="./grid_and_flexbox_Tasks/try.html" target="_blank">try</a>
                 <a href="./grid_and_flexbox_Tasks/git_hub/grid.html" target="_blank">grid</a>
                 <a href="./positivus_Landing_Page/landing_Page.html" target="_blank">Landing_Page</a>
-                <a href="./carousel/slider.html">slider</a>
+                <a href="./carousel/slider.html" target="_blank">slider</a>
+                <a href="./Table_task/table.html" target="_blank"></a>
             </div>
         </details>
 
